--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -61,7 +61,7 @@ jobs:
           restore-keys: ${{ runner.os }}-cargo-
       - name: Install modules
         working-directory: toolchain/chidori
-        run: rm ../../package.json && yarn install
+        run: yarn install
       - name: Tweak package.json
         working-directory: toolchain/chidori
         # This will update the package version to tag version. So artifacts uploaded to Github release will be named correctly.
@@ -112,7 +112,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Install modules
         working-directory: toolchain/chidori
-        run: rm ../../package.json && yarn install
+        run: yarn install
       - name: Tweak package.json
         working-directory: toolchain/chidori
         # This will update the package version to tag version and
