--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -187,7 +187,7 @@ jobs:
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
           pip install pytest pytest-mock pytest-asyncio
-          pytest -v
+          pytest -v -p no:qt
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
