--- a/toolchain/prompt-graph-exec/Cargo.toml
+++ b/toolchain/prompt-graph-exec/Cargo.toml
@@ -68,6 +68,8 @@ futures = "0.3.15"
 bincode = "2.0.0-rc.3"
 lazy_static = "1.4.0"
 
+tokio-cron-scheduler = "0.9.4"
+
 tracing = "0.1"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 tracing-log = "0.1.3"
