python example is working properly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ numpy = "^1.24.1"
 maturin = "1.1.0"
 pydot = "^1.4.2"
 jupyterlab = "^4.0.2"
+aiohttp = "^3.8.5"
+asyncio = "^3.4.3"
 
 
 [build-system]
