--- a/toolchain/prompt-graph-exec/Cargo.toml
+++ b/toolchain/prompt-graph-exec/Cargo.toml
@@ -13,7 +13,9 @@ bench = false
 [features]
 nodejs = []
 starlark = ["dep:starlark"]
-parquet = ["dep:parquet", "dep:arrow"]
+parquet = [
+#    "dep:parquet", "dep:arrow"
+]
 default = []
 
 [dependencies]
@@ -27,8 +29,8 @@ twox-hash = "1.6.3"
 # gluesql = "0.14.0"
 
 # Parquet feature must be enabled
-arrow = { version = "42.0.0", optional = true}
-parquet = { version = "42.0.0", optional = true}
+#arrow = { version = "42.0.0", optional = true}
+#parquet = { version = "42.0.0", optional = true}
 
 zip = "0.6.6"
 qdrant-client = "1.3.0"
