--- a/toolchain/prompt-graph-core/Cargo.toml
+++ b/toolchain/prompt-graph-core/Cargo.toml
@@ -2,6 +2,11 @@
 name = "prompt-graph-core"
 version = "0.1.0"
 edition = "2021"
+description = "Core of Chidori, compiles graph and node definitions into an interpretable graph"
+license = "MIT"
+homepage = "https://docs.thousandbirds.ai"
+repository = "https://github.com/ThousandBirdsInc/chidori"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
