--- a/toolchain/prompt-graph-ui/Cargo.toml
+++ b/toolchain/prompt-graph-ui/Cargo.toml
@@ -2,6 +2,11 @@
 name = "prompt-graph-ui"
 version = "0.1.0"
 edition = "2021"
+description = "UI for Chidori, provides visualization of runtime behavior"
+license = "MIT"
+homepage = "https://docs.thousandbirds.ai"
+repository = "https://github.com/ThousandBirdsInc/chidori"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
