Adjusting changelogs prior to release of prompt-graph-core v0.1.22, prompt-graph-exec v0.1.22, chidori v0.1.22

--- a/toolchain/prompt-graph-exec/Cargo.toml
+++ b/toolchain/prompt-graph-exec/Cargo.toml
@@ -28,7 +28,7 @@ protobuf = "3.2.0"
 hyper = { version = "1.0.0-rc.3", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 http-body-util = "0.1.0-rc.2"
-prompt-graph-core = { path = "../prompt-graph-core", version = "0.1.0" }
+prompt-graph-core = { path = "../prompt-graph-core", version = "^0.1.22" }
 openai-api-rs = "0.1.10"
 twox-hash = "1.6.3"
 # gluesql = "0.14.0"
