--- a/toolchain/prompt-graph-ui/Cargo.toml
+++ b/toolchain/prompt-graph-ui/Cargo.toml
@@ -17,6 +17,6 @@ tui-input = "0.7.1"
 tonic = "0.9"
 prost = "0.11"
 tokio = { version = "1", features = ["full"] }
-prompt-graph-core = { path = "../prompt-graph-core", version = "0.1.0" }
+prompt-graph-core = { path = "../prompt-graph-core", version = "^0.1.22" }
 anyhow = { version = "1.0", default-features = false }
 futures = "0.3.15"
