--- a/toolchain/prompt-graph-core/Cargo.toml
+++ b/toolchain/prompt-graph-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "prompt-graph-core"
-version.workspace = true
+version= "0.1.24"
 edition = "2021"
 description = "Core of Chidori, compiles graph and node definitions into an interpretable graph"
 license = "MIT"
