fixing python releases

--- a/toolchain/examples/rust/top-ai-launches-hn/Dockerfile
+++ b/toolchain/examples/rust/top-ai-launches-hn/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Rust runtime as a parent image
-FROM rust:1.54.0 as builder
+FROM rust:1.71.0
 
 # Set the working directory in the container to /usr/src/myapp
 WORKDIR /usr/src/myapp
@@ -10,5 +10,7 @@ COPY . .
 # Expose port 9800 for the Chidori server to listen on
 EXPOSE 9800
 
+RUN cargo build
+
 # Run the application (we're not going for build or runtime performance here)
-CMD ["cargo run"]
+CMD ["cargo", "run"]
