--- a/toolchain/chidori/Cargo.toml
+++ b/toolchain/chidori/Cargo.toml
@@ -77,7 +77,7 @@ wasm-bindgen-test = "0.2"
 tonic-build = "0.9.2"
 pyo3-build-config = "0.19.1"
 
-
-[package.metadata.maturin]
-python-source = "package_python"
-name = "chidori._chidori"
+[profile.release]
+lto = "fat"
+codegen-units = 1
+strip = true
