--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
       env:
         # Set to force version number, e.g., when no tag exists.
-        ARTIFACT_VERSION: TEST-0.0.0
+        ARTIFACT_VERSION: 0.1.25
     steps:
       - name: Create artifacts directory
         run: mkdir artifacts
