--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,9 +29,11 @@ jobs:
         run: cargo install cargo-smart-release
 
       - name: Build and Test
+        working-directory: toolchain
         run: cargo build --all && cargo test --all
 
       - name: Publish with Smart Release
+        working-directory: toolchain
         run: cargo smart-release
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
