--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,6 +34,6 @@ jobs:
 
       - name: Publish with Smart Release
         working-directory: toolchain
-        run: cargo smart-release
+        run: cargo smart-release --no-changelog-github-release --update-crates-index prompt-graph-core prompt-graph-exec chidori
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
