--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,9 +35,10 @@ jobs:
           - 19
           - 20
         system:
-          - os: macos-11-arm
-            target: aarch64-apple-darwin
-          - os: macos-11
+#          currently unsupported by github
+#          - os: macos-12-arm
+#            target: aarch64-apple-darwin
+          - os: macos-12
             target: x86_64-apple-darwin
           - os: ubuntu-20.04
             target: x86_64-unknown-linux-gnu
