--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,9 @@ jobs:
   create-release:
     name: create-release
     runs-on: ubuntu-latest
-      env:
-        # Set to force version number, e.g., when no tag exists.
-        ARTIFACT_VERSION: 0.1.25
+#      env:
+#        # Set to force version number, e.g., when no tag exists.
+#        ARTIFACT_VERSION: 0.1.25
     steps:
       - name: Create artifacts directory
         run: mkdir artifacts
