--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,9 +1,12 @@
 name: Python - Test & Release Package
 
 on:
+  workflow_dispatch:
   push:
+    branches:
+      - colton/improved-examples-and-releases
     tags:
-      - '*'
+      - 'v*'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -48,7 +51,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --features python
-          maturin-version: "v0.13.0"
+          maturin-version: "v1.1.0"
           working-directory: toolchain/chidori
           sccache: true
       - name: Install built wheel - x86_64
@@ -56,7 +59,7 @@ jobs:
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
           pip install pytest pytest-mock pytest-asyncio
-          pytest -v
+          pytest ./tests/python
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -67,7 +70,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        target: [x86_64]
+        target: [x86_64, aarch64]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -95,8 +98,8 @@ jobs:
       - name: Build wheels - universal2
         uses: messense/maturin-action@v1
         with:
-          args: --release --universal2 --out dist --features python
-          maturin-version: "v0.13.0"
+          args: --release --out dist --features python --target universal2-apple-darwin
+          maturin-version: "v1.1.0"
           working-directory: toolchain/chidori
           sccache: true
       - name: Install built wheel - universal2
@@ -104,7 +107,7 @@ jobs:
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*universal2.whl --force-reinstall
           pip install pytest pytest-mock pytest-asyncio
-          pytest -v
+          pytest ./tests/python
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -145,7 +148,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --features python
-          maturin-version: "v0.13.0"
+          maturin-version: "v1.1.0"
           working-directory: toolchain/chidori
           sccache: true
       - name: Install built wheel
@@ -154,7 +157,7 @@ jobs:
         run: |
           python -m pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
           pip install pytest pytest-mock pytest-asyncio
-          python -m pytest -v
+          python -m pytest -v ./tests/python
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -178,7 +181,7 @@ jobs:
           target: ${{ matrix.target }}
           manylinux: auto
           args: --release --out dist --features python
-          maturin-version: "v0.13.0"
+          maturin-version: "v1.1.0"
           working-directory: toolchain/chidori
           sccache: true
       - name: Install built wheel
@@ -187,7 +190,7 @@ jobs:
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
           pip install pytest pytest-mock pytest-asyncio
-          pytest -v -p no:qt
+          pytest -v -p no:qt ./tests/python
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
