--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,8 @@ databases/simulation_host_db/report.json
 databases/simulation_host_db/report.html
 
 .next
-
+dist
 .idea
+.venv
+
+toolchain/chidori/package_python/chidori/_chidori.abi3.so
