--- a/toolchain/chidori/Cargo.toml
+++ b/toolchain/chidori/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
 name = "chidori"
-version = "0.1.7"
+version= "0.1.24"
 edition = "2021"
+description = "A Rust library for executing prompt-graph models"
+license = "MIT"
+homepage = "https://docs.thousandbirds.ai"
+repository = "https://github.com/ThousandBirdsInc/chidori"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "chidori"
+name = "_chidori"
 crate-type = ["cdylib", "lib"]
 bench = false
 
@@ -28,10 +33,10 @@ sqlparser = "0.34.0"
 # serde-wasm-bindgen should be used instead
 
 # Vendor protoc and openssl so we don't need to separately install them
-openssl = { version = "0.10", features = ["vendored"] }
+openssl = { version = "0.10.55", features = ["vendored"] }
 
 once_cell = "1"
-prompt-graph-core = { path = "../prompt-graph-core", version = "0.1.0" }
+prompt-graph-core = { path = "../prompt-graph-core", version = "^0.1.24" }
 wasm-bindgen = {version = "0.2.86", features = []}
 handlebars = "4.3.7"
 anyhow = { version = "1.0", default-features = false }
@@ -72,7 +77,7 @@ wasm-bindgen-test = "0.2"
 tonic-build = "0.9.2"
 pyo3-build-config = "0.19.1"
 
-
-[package.metadata.maturin]
-python-source = "package_python"
-name = "chidori"
+[profile.release]
+lto = "fat"
+codegen-units = 1
+strip = true
