--- a/toolchain/prompt-graph-core/Cargo.toml
+++ b/toolchain/prompt-graph-core/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "prompt-graph-core"
-version = "0.1.0"
+version= "0.1.24"
 edition = "2021"
+description = "Core of Chidori, compiles graph and node definitions into an interpretable graph"
+license = "MIT"
+homepage = "https://docs.thousandbirds.ai"
+repository = "https://github.com/ThousandBirdsInc/chidori"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
@@ -17,11 +22,10 @@ build-protos = []
 
 # https://chat.openai.com/c/52edc960-dc19-4df7-b36f-30caad9c1905
 [dependencies]
+gluesql = "0.14.0"
 protobuf = "3.2.0"
 sqlparser = "0.34.0"
-apollo-compiler = { git = "https://github.com/ThousandBirdsInc/apollo-rs-with-editable-encoder.git", rev = "cf9b4fd03700c87b591a64b491d79130b028e90f"}
-apollo-encoder = { git = "https://github.com/ThousandBirdsInc/apollo-rs-with-editable-encoder.git", rev = "cf9b4fd03700c87b591a64b491d79130b028e90f" }
-apollo-parser = { git = "https://github.com/ThousandBirdsInc/apollo-rs-with-editable-encoder.git", rev = "cf9b4fd03700c87b591a64b491d79130b028e90f" }
+serde_yaml = "0.9.25"
 handlebars = "4.3.7"
 anyhow = { version = "1.0", default-features = false }
 indoc = "1.0.3"
