--- a/toolchain/prompt-graph-exec/Cargo.toml
+++ b/toolchain/prompt-graph-exec/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "prompt-graph-exec"
-version = "0.1.0"
+version= "0.1.24"
 edition = "2021"
+description = "Execution of Chidori, interprets a given graph of prompts and nodes, provides grpc api to the runtime"
+license = "MIT"
+homepage = "https://docs.thousandbirds.ai"
+repository = "https://github.com/ThousandBirdsInc/chidori"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,7 +18,9 @@ bench = false
 [features]
 nodejs = []
 starlark = ["dep:starlark"]
-parquet = ["dep:parquet", "dep:arrow"]
+parquet = [
+#    "dep:parquet", "dep:arrow"
+]
 default = []
 
 [dependencies]
@@ -21,19 +28,19 @@ protobuf = "3.2.0"
 hyper = { version = "1.0.0-rc.3", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 http-body-util = "0.1.0-rc.2"
-prompt-graph-core = { path = "../prompt-graph-core", version = "0.1.0" }
-openai-api-rs = "0.1.10"
+prompt-graph-core = { path = "../prompt-graph-core", version = "^0.1.24" }
+openai-api-rs = "0.1.11"
 twox-hash = "1.6.3"
 # gluesql = "0.14.0"
 
 # Parquet feature must be enabled
-arrow = { version = "42.0.0", optional = true}
-parquet = { version = "42.0.0", optional = true}
+#arrow = { version = "42.0.0", optional = true}
+#parquet = { version = "42.0.0", optional = true}
 
 zip = "0.6.6"
 qdrant-client = "1.3.0"
 base64 = "0.21.2"
-hnsw_rs = { git = "https://github.com/ThousandBirdsInc/hnswlib-rs.git", rev = "59051b2c54fa8175faf08930d4b93103d50b9ca4"}
+hnsw_rs_thousand_birds = "0.1.20"
 
 anyhow = { version = "1.0", default-features = false }
 
