--- a/toolchain/prompt-graph-ui/Cargo.toml
+++ b/toolchain/prompt-graph-ui/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "prompt-graph-ui"
-version = "0.1.0"
+version.workspace = true
 edition = "2021"
+description = "UI for Chidori, provides visualization of runtime behavior"
+license = "MIT"
+homepage = "https://docs.thousandbirds.ai"
+repository = "https://github.com/ThousandBirdsInc/chidori"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,6 +17,6 @@ tui-input = "0.7.1"
 tonic = "0.9"
 prost = "0.11"
 tokio = { version = "1", features = ["full"] }
-prompt-graph-core = { path = "../prompt-graph-core", version = "0.1.0" }
+prompt-graph-core = { path = "../prompt-graph-core", version = "^0.1.24" }
 anyhow = { version = "1.0", default-features = false }
 futures = "0.3.15"
