--- a/toolchain/prompt-graph-ui/Cargo.toml
+++ b/toolchain/prompt-graph-ui/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "prompt-graph-ui"
 version.workspace = true
-edition = "2021"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
 description = "UI for Chidori, provides visualization of runtime behavior"
-license = "MIT"
-homepage = "https://docs.thousandbirds.ai"
-repository = "https://github.com/ThousandBirdsInc/chidori"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
