--- a/toolchain/Cargo.toml
+++ b/toolchain/Cargo.toml
@@ -8,7 +8,39 @@ members = [
 ]
 
 [workspace.package]
-version = "0.1.24"
+version = "0.1.26"
+authors = ["Colton Pierson <colton@thousandbirds.ai>"]
+edition = "2021"
+license = "MIT"
+homepage = "https://docs.thousandbirds.ai"
+repository = "https://github.com/ThousandBirdsInc/chidori"
 
 [profile.release]
 lto = true
+
+[workspace.dependencies]
+gluesql = "0.14.0"
+protobuf = "3.2.0"
+sqlparser = "0.34.0"
+anyhow = { version = "1.0", default-features = false }
+indoc = "1.0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.96"
+tonic = "0.9"
+prost = "0.11"
+tokio = { version = "1", features = ["full"] }
+env_logger = "0.10.0"
+log = "0.4.16"
+futures = "0.3.15"
+bytes = "1.0.1"
+reqwest = { version = "0.11.18", features = ["json", "stream"]}
+futures-core = "0.3"
+tokio-stream = "0.1"
+ulid = "1.0.0"
+dashmap = "5.4.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+tracing-log = "0.1.3"
+tracing-chrome = "0.7.1"
+tracing-flame = "0.2.0"
+bincode = "2.0.0-rc.3"
