--- a/toolchain/prompt-graph-core/Cargo.toml
+++ b/toolchain/prompt-graph-core/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "prompt-graph-core"
-version= "0.1.24"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
 description = "Core of Chidori, compiles graph and node definitions into an interpretable graph"
-license = "MIT"
-homepage = "https://docs.thousandbirds.ai"
-repository = "https://github.com/ThousandBirdsInc/chidori"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -22,26 +23,25 @@ build-protos = []
 
 # https://chat.openai.com/c/52edc960-dc19-4df7-b36f-30caad9c1905
 [dependencies]
-gluesql = "0.14.0"
-protobuf = "3.2.0"
-sqlparser = "0.34.0"
+gluesql.workspace = true
+protobuf.workspace = true
+sqlparser.workspace = true
+anyhow.workspace = true
+indoc.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+tonic.workspace = true
+prost.workspace = true
+tokio.workspace = true
+env_logger.workspace = true
+log.workspace = true
+futures.workspace = true
+
+num_cpus = "1"
+petgraph = "0.6.3"
+typescript-type-def = "0.5.7"
 serde_yaml = "0.9.25"
 handlebars = "4.3.7"
-anyhow = { version = "1.0", default-features = false }
-indoc = "1.0.3"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.96"
-tonic = "0.9"
-prost = "0.11"
-num_cpus = "1"
-tokio = { version = "1", features = ["full"] }
-petgraph = "0.6.3"
-
-typescript-type-def = "0.5.7"
-env_logger = "0.10.0"
-log = "0.4.16"
-
-futures = "0.3.15"
 
 [build-dependencies]
 tonic-build = "0.9.2"
