--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -255,4 +255,4 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
           pip install --upgrade twine
-          twine upload --skip-existing *
+           upload --skip-existing *
