--- a/toolchain/examples/rust/top-ai-launches-hn/Cargo.toml
+++ b/toolchain/examples/rust/top-ai-launches-hn/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chidori = { version = "^0.1.24" }
+chidori = { version = "0.1.26" }
 tokio = { version = "1", features = ["full"] }
 anyhow = { version = "1.0", default-features = false }
 reqwest = { version = "0.11", features = ["json"] }
