--- a/examples/rust/top-ai-launches-hn/Cargo.toml
+++ b/examples/rust/top-ai-launches-hn/Cargo.toml
@@ -3,10 +3,8 @@ name = "top-ai-launches-hn"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-chidori = { path = "../../../chidori", version = "0.1.26" }
+chidori = { version = "0.1.26" }
 tokio = { version = "1", features = ["full"] }
 anyhow = { version = "1.0", default-features = false }
 reqwest = { version = "0.11", features = ["json"] }
